--- a/.github/workflows/switchScript.yaml
+++ b/.github/workflows/switchScript.yaml
@@ -8,7 +8,7 @@ on:
       - 'README.md'
       - 'switchScript.sh'
   schedule:
-    - cron: 0 8 * * *
+    - cron: 0 8 * * 0
   workflow_dispatch:
 
 env:
@@ -48,7 +48,7 @@ jobs:
     - name: Create release
       uses: ncipollo/release-action@v1
       with:
-        name: ${{ env.DATE }} ❤️ | 大气层个人整合包
+        name: ${{ env.DATE }} ❤️ | 大氣層個人整合包
         allowUpdates: true
         tag: ${{ env.tag_name }}
         commit: main
