--- a/.github/workflows/switchScript.yaml
+++ b/.github/workflows/switchScript.yaml
@@ -11,6 +11,9 @@ on:
     - cron: 0 8 * * 0
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 env:
   SCRIPT_SH: switchScript.sh
   TZ: Asia/Shanghai
